--- a/part2/phonebook/src/notification.css
+++ b/part2/phonebook/src/notification.css
@@ -8,3 +8,14 @@
     margin-bottom: 0.5em;
     border-radius: 0.5em;
 }
+
+.error {
+    background-color: rgba(128, 128, 128, 0.404);
+    border-color: red;
+    border-style: solid;
+    border-width: 2px;
+    color: red;
+    padding: 0.5em;
+    margin-bottom: 0.5em;
+    border-radius: 0.5em;
+}
